* fix lua error when auto applying